--- a/package.json
+++ b/package.json
@@ -2,11 +2,10 @@
   "name": "fallout-hacker-assistant",
   "version": "1.0.0",
   "description": "Simple app to assist players hack Fallout 4 terminals",
-  "main": "index.js",
+  "main": "fha.js",
   "scripts": {
     "test": "./node_modules/mocha/bin/mocha --recursive tests/",
-    "build": "./node_modules/browserify/bin/cmd.js index.js -o dist/index.js",
-    "watch": "./node_modules/watchify/bin/cmd.js index.js -o dist/index.js"
+    "build": "./node_modules/browserify/bin/cmd.js fha.js -o dist/fha.js"
   },
   "author": "Erick Zanardo",
   "license": "MIT",
