--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "fha.js",
   "scripts": {
     "test": "./node_modules/mocha/bin/mocha --recursive tests/",
-    "build": "./node_modules/browserify/bin/cmd.js fha.js -o dist/fha.js"
+    "build": "./node_modules/browserify/bin/cmd.js fha.js -o dist/fha.js && ./node_modules/browserify/bin/cmd.js index.js -o dist/index.js && cp -r index.html assets dist/"
   },
   "author": "Erick Zanardo",
   "license": "MIT",
@@ -14,5 +14,8 @@
     "watchify": "^3.6.1",
     "chai": "^3.4.1",
     "mocha": "^2.3.4"
+  },
+  "dependencies": {
+    "angular": "^1.4.8"
   }
 }
